# arturia2midi

./: .gitignore  LICENSE  main.py  pyproject.toml  readme.md  requirements.txt  test.py
.github/workflows/: python-app.yml
Devices/: BeatStep.json  BeatStepPro.json  KeyStep.json  KeyStep37.json  KeyStepPro.json
Projects/: Sample.KeyStepPro  SampleSEQ.KeyStepPro
src/arturia2midi/: arturia2midi.py  main_cli.py
src/arturia2midi.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
